--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,9 +7,9 @@
 
     <item
         android:id="@+id/action_search"
-        android:actionLayout="@layout/toolbar_search_icon"
         app:showAsAction="always"
         android:title="search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
         />
 
     <item
