--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".activity.MainActivity">
+    tools:context=".activity.MainActivity"
+    >
 
     <FrameLayout
         android:id="@+id/container_body"
@@ -35,7 +36,9 @@
                 android:orientation="vertical"
                 android:id="@+id/mainLayout"
                 android:background="#F6F6F6"
-                tools:context=".activity.MainActivity">
+                tools:context=".activity.MainActivity"
+                android:focusable="true"
+                android:focusableInTouchMode="true">
 
 
                 <LinearLayout
