--- a/app/src/main/res/layout/activity_search_product_list.xml
+++ b/app/src/main/res/layout/activity_search_product_list.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,11 +11,35 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/searc_result"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
+        android:layout_marginBottom="10dp"
+        android:background="#eee"
+        android:id="@+id/search_result_text_view"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/no_search_result_text_view"
+        android:textSize="26dp"
+        android:visibility="gone"
+        android:layout_marginTop="100dp"
+       android:gravity="center"
+        android:text="No Product Found..."/>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/product_search_listView">
 
     </ListView>
+
+
 
 </LinearLayout>
