--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
                     android:paddingBottom="5dp"
                     android:background="#8C1C1E"
                     android:descendantFocusability="beforeDescendants"
-                    android:focusableInTouchMode="true">
+                    android:focusableInTouchMode="true">`
 
                     <com.themallbd.workspaceit.utility.CustomAutoCompleteTextView
                         android:layout_width="match_parent"
@@ -209,6 +209,10 @@
                     </LinearLayout>
 
                 </LinearLayout>
+
+
+                <!-- New product Horizontal List START-->
+
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
@@ -248,6 +252,11 @@
                     </android.support.v7.widget.RecyclerView>
 
                 </LinearLayout>
+
+                <!-- New Product List END -->
+
+               <!-- Feature Product Block START-->
+
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
@@ -291,6 +300,8 @@
 
                     </LinearLayout>
                 </LinearLayout>
+
+
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
@@ -329,6 +340,154 @@
                         android:layout_height="175dp"
                         android:id="@+id/rv_featured_horizontalProducts" />
                 </LinearLayout>
+
+                <!-- Feature Product List END -->
+
+
+                <!-- Horizontal Package List Start -->
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp"
+                    android:layout_marginTop="6dp">
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:background="#FFFFFF"
+                        android:layout_height="40dp">
+
+                        <TextView
+                            android:background="#A31C1F"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:text="sale"
+                            android:textSize="@dimen/material_text_subhead"
+                            android:textAllCaps="true"
+                            android:paddingLeft="10dp"
+                            android:paddingRight="10dp"
+                            android:textColor="#FFFFFF"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginLeft="10dp"
+                            android:textStyle="bold"  />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="140dp">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="fitXY"
+                            android:src="@drawable/banner"/>
+
+                    </LinearLayout>
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="6dp"
+                    android:background="#FFFFFF">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:text="@string/package_text"
+                        android:textSize="@dimen/material_text_subhead"
+                        android:textAllCaps="true"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:textColor="#4D4D4D"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+                <View
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="#EEE"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#FFFFFF">
+
+                    <android.support.v7.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="175dp"
+                        android:id="@+id/packge_list_reclyeview" />
+                </LinearLayout>
+
+
+                <!-- Horizontal Package List END -->
+
+
+                <!-- Horizontal Special Product List Start-->
+
+
+
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="6dp"
+                    android:background="#FFFFFF">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:text="@string/specail_Product_text"
+                        android:textSize="@dimen/material_text_subhead"
+                        android:textAllCaps="true"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:textColor="#4D4D4D"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+                <View
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="#EEE"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#FFFFFF">
+
+                    <android.support.v7.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="175dp"
+                        android:id="@+id/specail_product_recyleiew" />
+                </LinearLayout>
+
+
+
+                <!-- Spacial Product END-->
+
+
+
+
+
+
+
+
+
+
 
                 <LinearLayout
                     android:orientation="horizontal"
