--- a/app/src/main/res/layout/activity_package_details.xml
+++ b/app/src/main/res/layout/activity_package_details.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+
     android:fillViewport="true"
-    android:id="@+id/produt_details_scroll"
-    >
+    android:id="@+id/produt_details_scroll">
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -210,7 +211,8 @@
                     android:background="#FFFFFF"
                     android:layout_marginTop="10dp"
                     android:orientation="vertical"
-                    android:layout_marginBottom="20dp">
+                    android:layout_marginBottom="20dp"
+                    >
 
                     <TextView
                         android:layout_width="match_parent"
@@ -225,8 +227,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/package_product_list_view"
-                        android:dividerHeight="0dp"
-                        android:divider="@null">
+                        android:dividerHeight="1dp"
+                        android:paddingBottom="20dp"
+
+                        >
                     </com.themallbd.workspaceit.utility.CustomListView>
 
 
