--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -263,7 +263,8 @@
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/rv_horizontal"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+                        android:layout_height="match_parent"
+                        ></android.support.v7.widget.RecyclerView>
 
                 </LinearLayout>
 
