--- a/app/src/main/res/layout/any_products_list_item.xml
+++ b/app/src/main/res/layout/any_products_list_item.xml
@@ -30,7 +30,8 @@
             android:text="Large Text"
             android:id="@+id/product_category_name"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp" />
+            android:layout_marginBottom="5dp"
+            android:textColor="#000000"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -38,5 +39,31 @@
             android:textSize="@dimen/material_text_body1"
             android:text="Large Text"
             android:id="@+id/product_category_price" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="1">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight=".90"
+                android:text="by"
+                android:textSize="12sp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight=".10"
+                android:textSize="@dimen/material_text_body1"
+                android:text="1"
+                android:id="@+id/any_product_manufracturer_text_view"
+                android:textColor="#961C1E"/>
+
+
+        </LinearLayout>
+
+
     </LinearLayout>
 </LinearLayout>
