--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -593,6 +593,21 @@
                         android:paddingRight="5dp"
                         android:stretchMode="columnWidth"
                         android:verticalSpacing="2dp" />
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dip"
+                        android:background="#eee"
+                        >
+
+                    </View>
+
+                    <ProgressBar
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:id="@+id/grid_view_progress_bar"
+                        android:visibility="invisible"
+                        style="?android:attr/progressBarStyleSmall"
+                        android:layout_gravity="center"/>
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
