--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -1,5 +1,5 @@
 <LinearLayout
-    android:layout_height="160dp"
+    android:layout_height="180dp"
     android:layout_width="match_parent"
     android:orientation="horizontal"
     android:baselineAligned="false"
@@ -17,10 +17,11 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="96dp"
+            android:layout_height="90dp"
             android:id="@+id/cart_item_imageView"
             android:contentDescription="sdf"
             android:scaleType="fitStart"/>
+
 
         <TextView
             android:layout_width="match_parent"
@@ -30,14 +31,53 @@
             android:id="@+id/cart_item_name_tv"
             android:singleLine="true" />
 
-        <TextView
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="1"
+            android:layout_marginTop="5dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Price: "
+                android:layout_weight=".2"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Medium Text"
+                android:textSize="14sp"
+                android:id="@+id/cart_item_price_tv"
+                android:singleLine="true"
+                android:textColor="#911414"/>
+        </LinearLayout>
+
+
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Medium Text"
-            android:textSize="@dimen/material_text_subhead"
-            android:id="@+id/cart_item_price_tv"
-            android:singleLine="true"
-            android:textColor="#911414"/>
+            android:orientation="horizontal"
+            android:weightSum="1"
+            android:layout_marginTop="5dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sub Total:"
+                android:layout_weight=".2"
+                android:textStyle="bold"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:text="12345 BDT"
+                android:textColor="#911414"
+                android:singleLine="true"
+                android:layout_weight=".8"
+                android:id="@+id/single_sub_total_text_view"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
