--- a/app/src/main/res/layout/list_view_loader.xml
+++ b/app/src/main/res/layout/list_view_loader.xml
@@ -4,13 +4,14 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="bottom"
-    android:layout_marginTop="50dp">
+    android:layout_marginTop="70dp">
 
     <ProgressBar
         android:layout_margin="5dp"
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="?android:attr/progressBarStyleSmall"
 
 
 
