--- a/app/src/main/res/layout/fragment_checkout_view.xml
+++ b/app/src/main/res/layout/fragment_checkout_view.xml
@@ -2,7 +2,8 @@
     android:id="@+id/checkout_scroll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:fillViewport="true"
+    >
 
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -41,7 +42,7 @@
                     android:textSize="14sp" />
 
                 <LinearLayout
-                    android:id="@+id/acc_info_layout"
+                    android:id="@+id/checkout_info_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:animateLayoutChanges="true"
@@ -66,7 +67,7 @@
                             android:layout_height="wrap_content"
                             android:text="Subtotal:"
                             android:textSize="16sp"
-                            android:layout_weight=".9"
+                            android:layout_weight=".7"
                             android:layout_margin="5dp"
                             android:gravity="right"/>
 
@@ -76,26 +77,24 @@
                             android:background="#c1c1c1"></View>
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_weight=".3"
                             android:layout_height="wrap_content"
                             android:text="1212 BDT"
                             android:layout_margin="5dp"
                             android:textSize="16sp"
+                            android:id="@+id/subtotal_checkout_text_view"
                             />
 
 
                     </LinearLayout>
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
 
-                        android:background="#c1c1c1"></View>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-
+                        android:background="@drawable/custom_border"
                         android:weightSum="1">
 
                         <TextView
@@ -103,7 +102,7 @@
                             android:layout_height="wrap_content"
                             android:text="Products Discount:"
                             android:textSize="16dp"
-                            android:layout_weight=".9"
+                            android:layout_weight=".7"
                             android:layout_margin="5dp"
                             android:gravity="right"/>
 
@@ -113,21 +112,19 @@
                             android:background="#c1c1c1"></View>
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_weight=".3"
                             android:layout_height="wrap_content"
                             android:text="1212 BDT"
                             android:layout_margin="5dp"
-                            android:textSize="16sp"/>
+                            android:textSize="16sp"
+                            android:id="@+id/total_discount_text_view"/>
 
 
                     </LinearLayout>
 
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
 
-                        android:background="#c1c1c1"></View>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -140,8 +137,9 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:orientation="vertical"
-                            android:layout_weight=".9"
-                            android:layout_margin="5dp">
+                            android:layout_weight=".7"
+                            android:layout_margin="5dp"
+                            >
 
                             <TextView
                                 android:layout_width="match_parent"
@@ -164,13 +162,14 @@
                                     android:layout_height="40dp"
                                     android:hint="Voucher Code"
                                     android:textSize="16sp"
+                                    android:textColorHint="#c1c1c1"
                                     />
                                 <Button
                                     android:id="@+id/more_new_product_button"
                                     android:layout_width="54dp"
                                     android:layout_height="25dp"
 
-                                    android:background="@drawable/button_bg_transparent"
+                                    android:background="#EEE"
                                     android:text="Add"
                                     android:textAppearance="?android:attr/textAppearanceMedium"
                                     android:textColor="#4D4D4D"
@@ -193,12 +192,13 @@
                             android:background="#c1c1c1"></View>
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:text="1212 BDT"
                             android:layout_margin="5dp"
-                            android:layout_weight=".1"
-                            android:textSize="16sp"/>
+                            android:layout_weight=".3"
+                            android:textSize="16sp"
+                            android:id="@+id/voucher_discount_text_view"/>
 
 
                     </LinearLayout>
@@ -221,7 +221,7 @@
                             android:layout_height="wrap_content"
                             android:text="Shipment Fee:"
                             android:textSize="16sp"
-                            android:layout_weight=".9"
+                            android:layout_weight=".7"
                             android:layout_margin="5dp"
                             android:gravity="right"/>
 
@@ -231,25 +231,24 @@
                             android:background="#c1c1c1"></View>
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:text="1212 BDT"
+                            android:layout_weight=".3"
                             android:layout_margin="5dp"
-                            android:textSize="16sp"/>
+                            android:textSize="16sp"
+                            android:id="@+id/shipment_fee_text_view"/>
 
 
                     </LinearLayout>
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
 
-                        android:background="#c1c1c1"></View>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
+                        android:background="@drawable/custom_border"
 
                         android:weightSum="1">
 
@@ -258,7 +257,7 @@
                             android:layout_height="wrap_content"
                             android:text="Total:"
                             android:textSize="16sp"
-                            android:layout_weight=".9"
+                            android:layout_weight=".7"
                             android:layout_margin="5dp"
                             android:gravity="right"/>
 
@@ -268,18 +267,35 @@
                             android:background="#c1c1c1"></View>
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:text="1212 BDT"
+                            android:layout_weight=".3"
                             android:layout_margin="5dp"
-                            android:textSize="16sp"/>
+                            android:textSize="16sp"
+                            android:id="@+id/total_payable_text_view"/>
 
 
                     </LinearLayout>
 
 
+                    <Button
+                        android:id="@+id/edit_cart_back_buttom"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:layout_weight="1"
+                        android:background="#412E2E"
+                        android:text="@string/back_to_cart_text"
+                        android:textAllCaps="true"
+                        android:textColor="#FFFFFF"
+                        android:layout_marginTop="10dp"
+                        android:layout_gravity="center"
+                        />
 
                 </LinearLayout>
+
+
 
 
             </LinearLayout>
@@ -297,7 +313,7 @@
             android:weightSum="1">
 
             <Button
-                android:id="@+id/add_shipping_infromation_button"
+                android:id="@+id/add_shipping_infromation_expand_button"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:background="#911414"
@@ -310,7 +326,7 @@
                 android:textSize="14sp" />
 
             <LinearLayout
-                android:id="@+id/shipping_info_layout"
+                android:id="@+id/new_customer_info_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -325,7 +341,7 @@
                     android:hint="Email Address"
                     android:inputType="textEmailAddress"
                     android:textColor="#7F7F7F"
-                    android:textColorHint="#7F7F7F" />
+                    android:textColorHint="#c2c2c2" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -345,7 +361,7 @@
                     android:hint="First Name"
                     android:inputType="text"
                     android:textColor="#7F7F7F"
-                    android:textColorHint="#7F7F7F" />
+                    android:textColorHint="#c2c2c2" />
 
                 <EditText
                     android:id="@+id/checkout_lname"
@@ -355,20 +371,20 @@
                     android:hint="Last Name"
                     android:inputType="text"
                     android:textColor="#7F7F7F"
-                    android:textColorHint="#7F7F7F" />
+                    android:textColorHint="#c2c2c2" />
 
-                <Spinner
-                    android:id="@+id/county_spinner"
-                    style="@style/Widget.AppCompat.Spinner.DropDown"
+                <EditText
+                    android:id="@+id/checkout_telephone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:entries="@array/countries_array"
+                    android:layout_weight="1"
+                    android:hint="Telephone No"
+                    android:inputType="phone"
+                    android:textColor="#7F7F7F"
+                    android:textColorHint="#c2c2c2" />
 
 
-                    >
-
-                </Spinner>
 
                 <EditText
                     android:id="@+id/checkout_address"
@@ -380,29 +396,39 @@
                     android:inputType="textMultiLine"
                     android:lines="4"
                     android:textColor="#7F7F7F"
-                    android:textColorHint="#7F7F7F" />
+                    android:textColorHint="#c2c2c2" />
 
-                <EditText
-                    android:id="@+id/checkout_telephone"
+
+
+
+
+
+                <Spinner
+                    android:id="@+id/city_spinner"
+                    style="@style/Widget.AppCompat.Spinner.DropDown"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:layout_weight="1"
-                    android:hint="Telephone No"
-                    android:inputType="phone"
-                    android:textColor="#7F7F7F"
-                    android:textColorHint="#7F7F7F" />
+                    android:entries="@array/cities_array"
+                    android:layout_marginBottom="10dp"
+
+                    >
+
+                </Spinner>
+
+
 
                 <Button
                     android:id="@+id/confrim_payemt_method"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="50dp"
+                    android:layout_marginBottom="10dp"
                     android:layout_weight="1"
                     android:background="#412E2E"
                     android:text="@string/confirm_payment"
                     android:textAllCaps="true"
-                    android:textColor="#FFFFFF" />
+                    android:textColor="#FFFFFF"
+                    android:layout_marginTop="10dp"/>
 
             </LinearLayout>
 
