--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -1,13 +1,139 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.themallbd.workspaceit.fragment.PaymentFragment">
+    tools:context="com.themallbd.workspaceit.fragment.PaymentFragment"
+    android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Later i wll add" />
+        android:layout_height="wrap_content"
+        android:weightSum="1"
+        android:orientation="vertical"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Choose Your Delivery Method"
+            android:background="#911414"
+            android:textColor="#FFFFFF"
+            android:paddingLeft="20dp"
+            android:padding="5dp"
+            android:textSize="20dp"/>
 
-</FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@drawable/custom_border"
+            android:weightSum="1"
+            >
+            
+             <LinearLayout
+                 android:layout_width="0dp"
+                 android:layout_height="wrap_content"
+                 android:layout_weight=".8"
+                 android:layout_marginLeft="10dp"
+                 android:layout_marginBottom="10dp">
+
+                 <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:orientation="vertical"
+                     android:id="@+id/radio_delivery_method_group">
+
+                 </RadioGroup>
+             </LinearLayout>
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="#c1c1c1"></View>
+            
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".2"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="40 BDT"
+                    android:id="@+id/delivery_price_first"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="16sp"
+                    android:textColor="#4C4C4C"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="70 BDT"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="10dp"
+                        android:textColor="#4C4C4C"
+                    android:textSize="16sp"
+                    android:id="@+id/dekivery_payment_second"/>
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="1"
+        android:orientation="vertical"
+        android:layout_marginTop="30dp"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Choose your Payment method"
+            android:background="#911414"
+            android:textColor="#FFFFFF"
+            android:paddingLeft="20dp"
+            android:padding="5dp"
+            android:textSize="20dp"/>
+
+
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:padding="10dp"
+           android:background="@drawable/custom_border">
+           <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:orientation="vertical"
+               android:id="@+id/radio_payment_method_group">
+
+
+
+           </RadioGroup>
+
+       </LinearLayout>
+
+
+    </LinearLayout>
+
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:layout_margin="10dp"
+        android:text="I confrim my order"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:background="#412E2E"
+        android:textColor="#FFFFFF"
+        android:id="@+id/confrim_final_order_button"/>
+
+</LinearLayout>
