--- a/app/src/main/res/layout/any_products_list_item.xml
+++ b/app/src/main/res/layout/any_products_list_item.xml
@@ -33,12 +33,27 @@
             android:layout_marginBottom="5dp"
             android:textColor="#000000"/>
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/material_text_body1"
-            android:text="Large Text"
-            android:id="@+id/product_category_price" />
+            android:weightSum="1">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".5"
+                android:textSize="@dimen/material_text_body1"
+                android:text="Large Text"
+                android:id="@+id/product_category_price" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".5"
+                android:textSize="@dimen/material_text_body1"
+                android:text="Large Text"
+                android:id="@+id/product_discount_price" />
+        </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
