--- a/app/src/main/res/layout/custom_grid_view_item.xml
+++ b/app/src/main/res/layout/custom_grid_view_item.xml
@@ -24,13 +24,29 @@
         android:singleLine="true"
         android:textAlignment="center" />
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_productPrice_gv"
-        android:textSize="@dimen/material_text_caption"
-        android:singleLine="true"
-        android:layout_gravity="center"
-        android:textAlignment="center" />
+        android:weightSum="1">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_productPrice_gv"
+            android:textSize="@dimen/material_text_caption"
+            android:singleLine="true"
+            android:layout_weight=".5"
+            />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".5"
+            android:textSize="@dimen/material_text_caption"
+            android:id="@+id/tv_product_discount_price"
+            />
+
+    </LinearLayout>
+
+
 
 </LinearLayout>
