--- a/app/src/main/res/layout/custom_horizontal_product_list.xml
+++ b/app/src/main/res/layout/custom_horizontal_product_list.xml
@@ -26,14 +26,34 @@
             android:singleLine="true"
             android:textAlignment="center" />
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tv_productPrice_hl"
-            android:textSize="@dimen/material_text_caption"
-            android:singleLine="true"
-            android:layout_gravity="center"
-            android:textAlignment="center" />
+            android:orientation="horizontal"
+            android:weightSum="1">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_productPrice_hl"
+                android:textSize="@dimen/material_text_caption"
+                android:singleLine="true"
+
+                android:text="asdasd"
+                android:layout_weight=".5"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_productPrice_discount_text_view"
+                android:textSize="@dimen/material_text_caption"
+                android:singleLine="true"
+
+                android:text="asdasd"
+                android:layout_weight=".5"
+                />
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
