--- a/app/src/main/res/layout/order_history_single_item.xml
+++ b/app/src/main/res/layout/order_history_single_item.xml
@@ -23,7 +23,7 @@
                 android:layout_width="22dp"
                 android:layout_height="22dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:background="#911414"
                 android:gravity="center"
                 android:text="1"
@@ -39,7 +39,7 @@
             android:id="@+id/invoice_number_text_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_weight=".75"
             android:text="Invyasydasgd"
             android:textColor="#333"
@@ -49,14 +49,39 @@
             android:layout_marginRight="20dp"/>
 
     </LinearLayout>
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:orientation="horizontal"
+        android:weightSum="1">
 
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".23"
+            android:text="Order Date:"
+            android:textSize="15sp"
+            android:layout_marginLeft="20dp"
+
+            />
+
+        <TextView
+            android:id="@+id/order_date_text_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".77"
+            android:text="121323"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:orientation="horizontal"
+        android:layout_marginTop="7dp"
         android:weightSum="1">
 
         <TextView
@@ -88,7 +113,9 @@
         android:text="AJShga sahdgahsdg"
         android:textSize="15sp"
         android:layout_marginTop="7dp"
-        android:layout_marginBottom="5dp"/>
+        android:layout_marginBottom="10dp"
+        android:textStyle="bold"
+        />
 
 
 </LinearLayout>
