--- a/app/src/main/res/layout/fragmnet_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragmnet_navigation_drawer.xml
@@ -10,19 +10,80 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-
-        <ListView
-            android:id="@id/android:list"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:drawSelectorOnTop="false" />
+            android:orientation="vertical"
+            android:background="#FFFFFF"
+            android:weightSum="1">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Shop For"
+                android:textSize="12sp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="5dp"
+                android:textColor="#c1c1c1"
+                />
+
+            <ListView
+                android:id="@+id/parent_categoey_list_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawSelectorOnTop="false"
+                android:divider="@null"
+                android:background="#FFFFFF"/>
+        </LinearLayout>
 
 
-        <ExpandableListView
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
 
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:weightSum="1"
+        android:background="@drawable/custom_border"
+        android:layout_marginBottom="20dp"
+        android:paddingTop="5dp">
+        <ImageButton
+            android:layout_width="25dp"
+            android:layout_height="20dp"
+            android:src="@drawable/long_arrow_left"
+            android:id="@+id/back_button_nav_fragment"
+            android:background="@null"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight=".15"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="Men"
+            android:layout_marginTop="10dp"
+            android:layout_weight=".9"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            />
+    </LinearLayout>
+
+
+
+
+    <ExpandableListView
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+       />
+
+</LinearLayout>
+
 
     </ViewSwitcher>
 
